--- a/programs.html
+++ b/programs.html
@@ -75,7 +75,7 @@
             <div class="col-sm">
               <div class="group">
                 <div class="group-title prog-title">
-                  <div class="badge badge-danger">Пароль на архивы: zakladki2019</div><span class="badge badge-warning">Интернет-хранилище файлов</span>
+                  <div class="badge badge-danger">Пароль на архивы: zakladki</div><span class="badge badge-warning">Интернет-хранилище файлов</span>
                 </div>
                 <ul>
                   <li>
@@ -121,41 +121,97 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Удаленное управление компютером</span></div>
+                <div class="group-title"><span class="badge badge-warning">Архиваторы</span></div>
                 <ul>
                   <li>
-                    <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1PT7hUXJg_lgWEpWcTVEc9cKqAOQ6TiY1" target="_blank">Ammyy_admin3.8</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
+                    <div class="icon prog_7zip"></div><a href="https://drive.google.com/open?id=1TSaGxlXBG_bRzipPaexwFPfi4eo-U8i3" target="_blank">7z1900-x86</a>
                   </li>
                   <li>
-                    <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1aUH68RhLyTjEuOl3CyqJryJJnOmZPb5C" target="_blank">Ammyy_admin3.7</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
+                    <div class="icon prog_7zip"></div><a href="https://drive.google.com/open?id=106XgURnBE37VC26xyYxCgKusbfCC1hFc" target="_blank">7z1900-x64</a>
                   </li>
                   <li>
-                    <div class="icon TeamViewer"></div><a href="https://drive.google.com/open?id=1MxHlp7JFKIZy-w5tgbD_5IWkpwGQBp6O" target="_blank">TeamViewer 14.1.3399 Portable</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
+                    <div class="icon prog_winrar"></div><a href="https://drive.google.com/open?id=1vDBqhWCzqkNTlfd8IKr1i9QX7fATYTuU" target="_blank">WinRAR 5.70</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Проигрыватель</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_Aimp"></div><a href="https://drive.google.com/open?id=1OqFi7OJjL5FZKjSC_FC3gRbOqsE3sNV-" target="_blank">Aimp (+radio+skin)</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Скриншотер</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_FastStone"></div><a href="https://drive.google.com/open?id=1isVYJIBqRhk3ON5CIlUVBb1SO1wyepv7" target="_blank">FastStone.Capture_portable</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Удаленное управление компютером</span></div>
+                <ul>
+                  <li>
+                    <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1BEIar3Ge5aw_uDY5isKTNZ5l_4BWD2Nj" target="_blank">Ammyy_admin3.8</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                  <li>
+                    <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1Yp0_ko_FNcsMm6gMd0vffeMIchArFWD6" target="_blank">Ammyy_admin3.7</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                  <li>
+                    <div class="icon TeamViewer"></div><a href="https://drive.google.com/open?id=1ZTJCd2kIU_HOxJe_wQ8nMOxVbytjNnVJ" target="_blank">TeamViewer.14.Portable</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Очистка компютера (+автозапуск)</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_ccleaner"></div><a href="https://drive.google.com/open?id=1SRFx7hNjMrxysVsD2PSFeXjI7XEn7GLe" target="_blank">CCleaner_5.55.7108</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                  <li>
+                    <div class="icon prog_regorganizer"></div><a href="https://drive.google.com/open?id=1JL9K_7YX73tGfGFaUMP-1cxG-RmDubHg" target="_blank">RegOrganizer_8.26</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Анализ, тест и мониторинг компьютера</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_AIDA64"></div><a href="https://drive.google.com/open?id=11pfy__qDlI79InKldhfoDBCLFo0kHDN-" target="_blank">AIDA64</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                  <li>
+                    <div class="icon prog_hwmonitor"></div><a href="https://drive.google.com/open?id=1tyknLqKcjkOZvMix-MWBfxDJOkrIkMfU" target="_blank">HWMonitor</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
                 <div class="group-title"><span class="badge badge-warning">Для N.O.D.32 продление лицензии</span></div>
                 <ul>
                   <li>
-                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1W-VCgsxRUvFafF_oXWoPhPwZ1pMt-dLT" target="_blank">TNod1.6.4.0Final+Portable</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
+                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2" target="_blank">TNod_СТАРЫЕ_версии</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
                   <li>
-                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1FXzFYfft3nsMDDjE4R1l4eLIb9nJj3Yw" target="_blank">TNod1.6.5.0Beta</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
+                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1AodVQ5PclVVuKgKfW7tSNTsfV--jpvOR" target="_blank">TNod_1.6.7.0</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
                   <li>
-                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1X1cmktodjyPf80bbpuekVcmJXMys73Gq" target="_blank">TNod1.6.6.0Beta+Portable</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki2019"></div>
-                  </li>
-                  <li>
-                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=1XHGmrAC9EnDg1I7SJ9xP1STImwE6UKd7" target="_blank">Инструкции для N.O.D.32 ESET</a>
+                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W" target="_blank">Инструкции для N.O.D.32 ESET</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
