--- a/programs.html
+++ b/programs.html
@@ -118,6 +118,28 @@
                   </li>
                 </ul>
               </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Загрузить браузеры</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_GoogleChrome"></div><a href="https://www.google.com/intl/ru_ALL/chrome/" target="_blank">Google Chrome</a>
+                  </li>
+                  <li>
+                    <div class="icon prog_Opera"></div><a href="https://www.opera.com/ru/download" target="_blank">Opera</a>
+                  </li>
+                  <li>
+                    <div class="icon prog_firefox"></div><a href="https://www.mozilla.org/uk/firefox/new/" target="_blank">Mozilla Firefox</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Для браузеров веб-плеер</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog_AdobeFlashPlayer"></div><a href="https://get.adobe.com/ru/flashplayer/" target="_blank">Adobe Flash Player</a>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="col-sm">
               <div class="group">
