--- a/index.html
+++ b/index.html
@@ -412,8 +412,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-03-23</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-04-01</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=4cZAhBPkCVU" target="_blank">Прикол на ВЫБОРАХ</a>
+                    <div class="icontooinfo a0repa3" title="У селі на Рівненщині понад 2,5 тисячі жителів носять однакове прізвище" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновлен MP3 плеер</a>
