--- a/shops.html
+++ b/shops.html
@@ -158,9 +158,8 @@
                     <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st5csxogcc" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-4qh7st5csxs048" target="_blank">skidka.ua`</a>
+                    <div class="icon skidka ua"></div><a href="http://www.skidka.ua/" target="_blank">skidka.ua</a>
                   </li>
-                  <!-- <li><img class="icon" src="img/privatmarket.ua.ico" alt="privatmarket"><a href="https://letyshops.com/r/privatmarket-4qh7st5csxwko0" target="_blank">privatmarket.ua</a></li>-->
                   <li>
                     <div class="icon foxtrot com ua"></div><a href="https://letyshops.com/r/fokstrot-ua-4qh7st5csxwko0" target="_blank">foxtrot.com.ua`</a>
                   </li>
