--- a/shops.html
+++ b/shops.html
@@ -126,8 +126,6 @@
                   </li>
                 </ul>
               </div>
-            </div>
-            <div class="col-sm">
               <div class="group">
                 <div class="group-title"><span class="badge badge-success">Зарубежные</span></div>
                 <ul>
@@ -139,6 +137,8 @@
                   </li>
                 </ul>
               </div>
+            </div>
+            <div class="col-sm">
               <div class="group">
                 <div class="group-title"><span class="badge badge-success">Любые ТОВАРЫ!</span></div>
                 <ul>
@@ -417,7 +417,7 @@
                 hot_d = document.getElementById('hotlog_dyn');
                 hot_d.appendChild(hot_s);
               </script>
-              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" width="1" height="1" alt="HotLog"></a>
+              <noscript></noscript><a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=605" border="0" width="1" height="1" alt=""></a>
             </div>
           </div>
           <div class="col-sm footer-col">
