--- a/shops.html
+++ b/shops.html
@@ -197,6 +197,7 @@
                   </li>
                   <li>
                     <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                 </ul>
               </div>
