--- a/shops.html
+++ b/shops.html
@@ -241,6 +241,10 @@
                   <li>
                     <div class="icon berni com ua"></div><a href="https://letyshops.com/r/berni-4qh7st5cszy8k4" target="_blank">berni.com.ua`</a>
                   </li>
+                  <li>
+                    <div class="icon garnamama com"></div><a href="https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk" target="_blank">garnamama.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине" alt=""></div>
+                  </li>
                 </ul>
               </div>
               <div class="group">
@@ -291,6 +295,7 @@
                   </li>
                   <li>
                     <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -299,6 +304,7 @@
                 <ul>
                   <li>
                     <div class="icon florium ua"></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
                   </li>
                 </ul>
               </div>
