--- a/index.html
+++ b/index.html
@@ -412,8 +412,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-04-01</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-04-04</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon garnamama com"></div><a href="https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk" target="_blank">garnamama.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=4cZAhBPkCVU" target="_blank">Прикол на ВЫБОРАХ</a>
