--- a/programs.html
+++ b/programs.html
@@ -85,7 +85,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Всяки настройки</span></div>
+                <div class="group-title"><span class="badge badge-warning">Всякие настройки</span></div>
                 <ul>
                   <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ZAKLADOK</a>
