--- a/shops.html
+++ b/shops.html
@@ -173,10 +173,36 @@
                     <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua`</a>
                   </li>
                   <li>
+                    <div class="icon telemart ua"></div><a href="https://" target="_blank">telemart.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon shop kyivstar ua"></div><a href="https://letyshops.com/r/kyivstar-4qh7st5ct12cog" target="_blank">shop.kyivstar.ua`</a>
                   </li>
                   <li>
+                    <div class="icon avic ua"></div><a href="https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc" target="_blank">avic.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon coffeeok com ua"></div><a href="https://letyshops.com/r/kofeyok-ua-4qh7st5csy680o" target="_blank">coffeeok.com.ua`</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Запчасти, инструменты, приборы</span></div>
+                <ul>
+                  <li>
+                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. ТМ Мастер-Плюс - Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники." alt=""></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Строительные материалы</span></div>
+                <ul>
+                  <li>
+                    <div class="icon starkbud com ua"></div><a href="https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4" target="_blank">starkbud.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд" alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -194,10 +220,6 @@
                   </li>
                   <li>
                     <div class="icon avtodiski net ua"></div><a href="https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8" target="_blank">avtodiski.net.ua`</a>
-                  </li>
-                  <li>
-                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -220,6 +242,14 @@
                   </li>
                   <li>
                     <div class="icon asos com"></div><a href="https://letyshops.com/r/asos-4qh7st5csyw48o" target="_blank">asos.com`</a>
+                  </li>
+                  <li>
+                    <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c" target="_blank">maximoda.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon dressa com ua"></div><a href="https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk" target="_blank">dressa.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя." alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -356,6 +386,15 @@
                   </li>
                   <li>
                     <div class="icon rentalcars com"></div><a href="https://letyshops.com/r/rentalcars-4qh7st5ct0qok0" target="_blank">rentalcars.com`</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Дом/Квартира/Комната</span></div>
+                <ul>
+                  <li>
+                    <div class="icon ru airbnb com"></div><a href="https://letyshops.com/r/airbnb-4qh7st5x4ayoc0" target="_blank">ru.airbnb.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. " alt=""></div>
                   </li>
                 </ul>
               </div>
