--- a/index.html
+++ b/index.html
@@ -412,8 +412,38 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обнова в закладках: v.2019-04-04</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-04-04</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon ru airbnb com"></div><a href="https://letyshops.com/r/airbnb-4qh7st5x4ayoc0" target="_blank">ru.airbnb.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. " alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon starkbud com ua"></div><a href="https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4" target="_blank">starkbud.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon telemart ua"></div><a href="https://" target="_blank">telemart.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon avic ua"></div><a href="https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc" target="_blank">avic.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon dressa com ua"></div><a href="https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk" target="_blank">dressa.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c" target="_blank">maximoda.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon garnamama com"></div><a href="https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk" target="_blank">garnamama.com`</a>
