--- a/index.html
+++ b/index.html
@@ -416,6 +416,11 @@
                 <ul>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon ru airbnb com"></div><a href="https://letyshops.com/r/airbnb-4qh7st5x4ayoc0" target="_blank">ru.airbnb.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. " alt=""></div>
                   </li>
