--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
