--- a/social.html
+++ b/social.html
@@ -92,7 +92,7 @@
                 <ul>
                   <li>
                     <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог/прокачка Телеграм-каналов" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)" alt=""></div>
                   </li>
                   <li>
                     <div class="icon tgstat com"></div><a href="https://uk.tgstat.com/" target="_blank">tgstat.com</a>
