--- a/social.html
+++ b/social.html
@@ -92,10 +92,19 @@
                 <ul>
                   <li>
                     <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (Условие: free + нужно иметь 500 подписчиков)" alt=""></div><span class="opisi">free500+rek+stat</span>
                   </li>
                   <li>
                     <div class="icon tgstat com"></div><a href="https://uk.tgstat.com/" target="_blank">tgstat.com</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Добавление канала в каталог бесплатно/статистика/реклама (Условие: БЕСПЛАТНО добавить любой канал в каталог! +Рекламная площадка УДОБНАЯ)" alt=""></div><span class="opisi">free0+rek+stat</span>
+                  </li>
+                  <li>
+                    <div class="icon telega in"></div><a href="https://telega.in/?ref=Tjy-BcZy" target="_blank">telega.in`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Рекламная площадка. (Условие: добавить канал +100 подписчиков.)" alt=""></div><span class="opisi">free100+rek            </span>
+                  </li>
+                  <li>
+                    <div class="icon tgrm su"></div><a href="https://tgrm.su/channels/" target="_blank">tgrm.su</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Прокачка канала. (Условие: чтобы добавить любой канал в каталог +79 рублей. Поднятия канала в ТОП: 250р/три дня; 500р/на неделю; 1500/на месяц)" alt=""></div><span class="opisi">79р.+top250р.</span>
                   </li>
                   <!-- тут реклама от ГУГЛ - 3 колонки-вконце 336-280-->
                   <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="7850904161"></ins>
