--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-04-04</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.ukrinform.ru/rubric-economy/2673413-pravitelstvo-obazalo-naftogaz-snizit-cenu-na-gaz-dla-naselenia.html" target="_blank">Упадет цена на ГАЗ!</a>
+                    <div class="icontooinfo a0repa3" title="За апрель будем уже платить по 8.38грн./куб (была цена 8.55грн./куб)" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Социум. Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (нужно иметь +500 подписчиков)" alt=""></div>
@@ -478,11 +483,6 @@
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.bbc.com/ukrainian/features-russian-41112484" target="_blank">ТВ-карта Украины</a>
                     <div class="icontooinfo a0repa3" title="Какие каналы ТВ на кого работают. Кто с чем подходит к выборам." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=A25RRbUh4Ws" target="_blank">Список виборців</a>
-                    <div class="icontooinfo a0repa3" title="Дізнайся чи є ти в списках виборців? Непроєвибори! Переходь на сайт: drv.gov.ua" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
