--- a/media.html
+++ b/media.html
@@ -77,23 +77,23 @@
                 <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.зарубежная playlist.2019.04</span></div>
                 <ul>
                   <li>
+                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/m8kdm5toer7h.html" target="_blank">
+                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/lfpz10mc11cz.html" target="_blank">
+                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a><a href="https://turbo.to/7trgjc8n6q8u.html" target="_blank">
+                      <div class="icontooinfo a-3_cifra" title="Скачать 3-ю часть" alt=""></div></a><a href="https://turbo.to/83ms14po83fu.html" target="_blank">
+                      <div class="icontooinfo a-4_cifra" title="Скачать 4-ю часть" alt=""></div></a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
+                  </li>
+                  <li>
                     <!-- тут код плеера-->
                     <div id="player" style="height:60px;width:240px">
                       <script>
                         var player = new Playerjs({id:"player", file:"https://zakladki.github.io/playlist1zap.txt"});
                         
+                        
                       </script>
                     </div>
-                  </li>
-                  <li>
-                    <div class="icon a0download"></div><a href="https://turbo.to/m8kdm5toer7h.html" target="_blank">Скачать_часть-1</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://turbo.to/lfpz10mc11cz.html" target="_blank">Скачать_часть-2</a><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
-                  </li>
-                  <li>
-                    <div class="icon a0download"></div><a href="https://turbo.to/7trgjc8n6q8u.html" target="_blank">Скачать_часть-3</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://turbo.to/83ms14po83fu.html" target="_blank">Скачать_часть-4</a><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
                   </li>
                 </ul>
               </div>
