--- a/communal.html
+++ b/communal.html
@@ -114,7 +114,7 @@
                     <div class="icon kresc com ua"></div><a href="http://kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span>
                   </li>
                   <li>
-                    <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабин.Кир.обленерго</span>
+                    <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабин.обленерго.стар</span>
                   </li>
                 </ul>
               </div>
