--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
                   </li>
                   <li>
-                    <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабин.Кир.обленерго</span>
+                    <div class="icon kresc com ua"></div><a href="http://kresc.com.ua/payment.html" target="_blank">kresc.com.ua</a><span class="opisi">Електро.ОЕК</span>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span>
@@ -376,6 +376,10 @@
                 <div class="group-title"><a href="/city.html"><span class="badge badge-dark">Городок/Новомиргород</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА</a>
+                    <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п." alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon google maps"></div><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a>
                   </li>
                   <li>
@@ -414,6 +418,11 @@
               <div class="group">
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-04-04</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА</a>
+                    <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.ukrinform.ru/rubric-economy/2673413-pravitelstvo-obazalo-naftogaz-snizit-cenu-na-gaz-dla-naselenia.html" target="_blank">Упадет цена на ГАЗ!</a>
@@ -493,11 +502,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
