--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-04-04</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА</a>
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам" alt=""></div>
                   </li>
