--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <ul>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА (обновлено)</a>
+                    <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА+</a>
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам" alt=""></div>
                   </li>
                   <li>
