--- a/shops.html
+++ b/shops.html
@@ -382,7 +382,7 @@
                     <div class="icon tickets ua"></div><a href="https://letyshops.com/r/tickets-ua-4qh7st5ct0kk08" target="_blank">tickets.ua`</a>
                   </li>
                   <li>
-                    <div class="icon hotels24 ua"></div><a href="https://letyshops.com/r/hotels24-4qh7st5ct0kk08" target="_blank">hotels24.ua`</a>
+                    <div class="icon hotels24 ua"></div><a href="https://hotels24.ua/" target="_blank">hotels24.ua</a>
                   </li>
                   <li>
                     <div class="icon rentalcars com"></div><a href="https://letyshops.com/r/rentalcars-4qh7st5ct0qok0" target="_blank">rentalcars.com`</a>
