--- a/communal.html
+++ b/communal.html
@@ -152,6 +152,12 @@
                     <div class="icon my ukrtelecom ua"></div><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span>
                   </li>
                   <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a>
+                  </li>
+                  <li>
                     <div class="icon novom ulan in ua"></div><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span>
                   </li>
                   <li>
