--- a/shops.html
+++ b/shops.html
@@ -287,6 +287,10 @@
                     <div class="icon bomond com ua"></div><a href="https://bomond.com.ua/" target="_blank">bomond.com.ua</a>
                   </li>
                   <li>
+                    <div class="icon watsons ua"></div><a href="https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo" target="_blank">watsons.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Товари для краси та здоровя Інтернет-магазина Watsons Україна" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon ostrivkrasy com"></div><a href="https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g" target="_blank">ostrivkrasy.com`</a>
                   </li>
                   <li>
