--- a/bank.html
+++ b/bank.html
@@ -99,6 +99,19 @@
                   <li>
                     <div class="icon old kurs com ua"></div><a href="https://old.kurs.com.ua/webmoney" target="_blank">old.kurs.com.ua</a>
                   </li>
+                </ul>
+              </div>
+              <div class="group">
+                <div class="group-title"><span class="badge badge-success">Торговые площадки (фиат+криптовалюта)</span></div>
+                <ul>   
+                  <li>
+                    <div class="icon tradingview_com"></div><a href="https://ru.tradingview.com/" target="_blank">tradingview.com</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView" alt="">       </div>
+                  </li>
+                  <li>
+                    <div class="icon exmo_com"></div><a href="https://exmo.com/?ref=1654818" target="_blank">exmo.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Биткоин биржа и трейдинг платформа" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon bitfinex com"></div><a href="https://www.bitfinex.com/?locale=ru" target="_blank">bitfinex.com</a>
                   </li>
