--- a/communal.html
+++ b/communal.html
@@ -143,7 +143,8 @@
                     <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">ТАРИФЫ</span>
                   </li>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ</span>
+                    <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="http://cc.ukrtele.com/" target="_blank">cc.ukrtele.com</a><span class="opisi">Если Вас заблокировали</span>
@@ -155,7 +156,8 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a>
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
                     <div class="icon novom ulan in ua"></div><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span>
