--- a/shops.html
+++ b/shops.html
@@ -221,6 +221,10 @@
                   <li>
                     <div class="icon avtodiski net ua"></div><a href="https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8" target="_blank">avtodiski.net.ua`</a>
                   </li>
+                  <li>
+                    <div class="icon dok dbroker com ua"></div><a href="https://letyshops.com/r/dok-ua-4qh7st6ahuecw8" target="_blank">dok.dbroker.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине." alt=""></div>
+                  </li>
                 </ul>
               </div>
             </div>
