--- a/index.html
+++ b/index.html
@@ -423,8 +423,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-05-07</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-05-08</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon dok dbroker com ua"></div><a href="https://letyshops.com/r/dok-ua-4qh7st6ahuecw8" target="_blank">dok.dbroker.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине." alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
@@ -486,16 +491,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c" target="_blank">maximoda.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon garnamama com"></div><a href="https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk" target="_blank">garnamama.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://www.youtube.com/watch?v=4cZAhBPkCVU" target="_blank">Прикол на ВЫБОРАХ</a>
-                    <div class="icontooinfo a0repa3" title="У селі на Рівненщині понад 2,5 тисячі жителів носять однакове прізвище" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
